--- a/style.css
+++ b/style.css
@@ -414,15 +414,27 @@ footer {
   p {
     font-size: 1em;
   }
+  
   nav a {
     font-size: 1.2em;
     padding: 0.5em 1.2em;
   }
+
   nav a:first-of-type {
     margin-left: 0;
   }
+
   .contact__list {
     font-size: 1em;
+  }
+
+  .production label {
+    height: 7em;
+  }
+
+  dl {
+    margin: 0;
+    font-size: 0.8em;
   }
 }
 
