--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 html, body {
-  font-family: 'M PLUS 1p', sans-serif;
+  font-family: 'Noto Sans JP', sans-serif;
   color: #565656;
   background: linear-gradient(25deg, #F13F79, #FFC778, #ff8c00) no-repeat;
   margin: 0;
