--- a/style.css
+++ b/style.css
@@ -55,6 +55,15 @@ header img {
   width: 1280px;
 }
 
+img {
+  opacity: 1;
+  transition: opacity 0.3s;
+}
+
+img[data-src] {
+  opacity: 0;
+}
+
 nav {
   position: fixed;
   top: 0;
@@ -173,8 +182,7 @@ nav a:active {
 }
 
 .production img{
-  width: 432px;
-  height: 234px;
+  height: 100%;
   transition: all 0.5s;
 }
 
