--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ h1 {
 
 h2 {
   font-size: 2em;
+  letter-spacing: 1px;
 }
 
 h3 {
@@ -62,6 +63,7 @@ nav {
   background-color: #565656;
   margin-left: -279px;
   overflow: hidden;
+  letter-spacing: -0.4em;
 }
 
 nav h1 {
@@ -70,12 +72,13 @@ nav h1 {
 }
 
 nav a {
+  display: inline-block;
   color: #fff;
   font-size: 1.6em;
   padding: 0 1em;
   line-height: 1.7;
-  float: left;
   transition: all 0.5s;
+  letter-spacing: 0.1em;
 }
 
 nav a:link, nav a:visited, nav a:active {
@@ -89,6 +92,10 @@ nav a:hover {
 .heading {
   text-align: center;
   padding: 0.8em;
+}
+
+.heading h3 {
+  letter-spacing: 1px;
 }
 
 .container {
@@ -379,17 +386,12 @@ footer {
   nav {
     width: 100%;
     left: 0;
-    margin-left: 0;
     margin: 0 auto;
   }
 
   nav a {
     font-size: 1.4em;
     padding: 0 1.2em;
-  }
-
-  nav a:first-of-type {
-    margin-left: 2em;
   }
 
   #profile p br{
@@ -427,10 +429,6 @@ footer {
     padding: 0.5em 1.2em;
   }
 
-  nav a:first-of-type {
-    margin-left: 0;
-  }
-
   .production label {
     height: 7em;
   }
@@ -453,9 +451,6 @@ footer {
   nav a {
     font-size: 1em;
     padding: 0.5em 0.7em;
-  }
-  nav a:first-of-type {
-    margin-left: 0.6em;
   }
 
   .grid {
