--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ h1 {
 
 h2 {
   font-size: 2em;
-  letter-spacing: 1px;
+  letter-spacing: 0.1rem;
 }
 
 h3 {
@@ -63,12 +63,12 @@ nav {
   background-color: #565656;
   margin-left: -279px;
   overflow: hidden;
-  letter-spacing: -0.4em;
+  letter-spacing: -0.4rem;
 }
 
 nav h1 {
   padding: 0.1em 0;
-  letter-spacing: 0.1em;
+  letter-spacing: 0.1rem;
 }
 
 nav a {
@@ -78,7 +78,7 @@ nav a {
   padding: 0 1em;
   line-height: 1.7;
   transition: all 0.5s;
-  letter-spacing: 0.1em;
+  letter-spacing: 0.1rem;
 }
 
 nav a:link, nav a:visited, nav a:active {
@@ -95,7 +95,7 @@ nav a:hover {
 }
 
 .heading h3 {
-  letter-spacing: 1px;
+  letter-spacing: 0.1rem;
 }
 
 .container {
@@ -107,10 +107,10 @@ nav a:hover {
   border-radius: 2em;
 }
 
-.grid {
-  display: grid;
-  grid-template-rows: 1fr;
-  grid-template-columns: 50% 50%;
+.flex {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 #profile,#product,#music,#contact {
@@ -119,7 +119,6 @@ nav a:hover {
 }
 
 .profile__left {
-  grid-column: 1;
   padding: 0.5em 0;
   text-align: center;
 }
@@ -130,7 +129,7 @@ nav a:hover {
 }
 
 .profile__right {
-  grid-column: 2;
+  padding: 0.5em 0;
 }
 
 .profile__right h3 {
@@ -394,12 +393,8 @@ footer {
     padding: 0 1.2em;
   }
 
-  #profile p br{
+  .profile__right p br {
     display: none;
-  }
-
-  .social {
-    white-space: normal;
   }
 
   .bg-css {
@@ -426,7 +421,7 @@ footer {
   
   nav a {
     font-size: 1.2em;
-    padding: 0.5em 1.2em;
+    padding: 0.5em 0.4em;
   }
 
   .production label {
@@ -447,29 +442,20 @@ footer {
   }
 }
 
-@media (max-width: 450px) {
+@media (max-width: 480px) {
   nav a {
     font-size: 1em;
-    padding: 0.5em 0.7em;
+    padding: 0.5em 0.4em;
   }
 
-  .grid {
-    grid-template-rows: 230px 1fr;
-    grid-template-columns: 1fr;
-  }
-  .profile__left {
-    grid-row: 1;
-    grid-column: 1;
+  .flex {
+    flex-direction: column;
+    justify-content: center;
   }
 
   .profile__left img {
     width: 40%;
     border-radius: 50%;
-  }
-
-  .profile__right {
-    grid-row: 2;
-    grid-column: 1;
   }
 
   .profile__right h3 {
