--- a/style.scss
+++ b/style.scss
@@ -184,7 +184,7 @@ a {
 .work {
   width: 100%;
   &__img {
-    width: 400px;
+    width: 100%;
     padding-bottom: 200px;
     background: center/cover no-repeat url("assets/musicvisual.jpg");
     margin: 0 auto;
@@ -257,14 +257,4 @@ a {
   &__copyright {
     margin: 0;
   }
-}
-
-.js-fade {
-  opacity: 0;
-  transition: 0.4s;
-}
-
-.js-fade.js-show {
-  opacity: 1;
-  transform: none;
 }
